--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <body>
-        <header class="bg-style bg" >
+        <header class="bg-style bg" data-aos="fade-down" data-aos-duration="1000">
                 <div class="typewriter">
                     <h1>player.no2</h1>
                 </div>
